--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ timezone: US/Central
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
-url: http://yoursite.com
+url: https://faykade.github.io
 root: /
 permalink: :year/:month/:day/:title/
 permalink_defaults:
