work on documenting strawpoll

--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: The Faykade
+title: Project Based Learning
 subtitle:
 description: A simple blog to illustrate my interests in programming, television, nature, and anything else
 author: Thomas Ulrich
